css/main.css
html{
  width:100%;
  height:100%;
}

body{
  color: #333;
  width:100%;
  height:100%;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 14px;
}

.navbar{
  background-color: white;
  min-height: 60px;
  padding-top: 5px;
}

.navbar-brand{
  font-size: 22px;
  font-weight: 700;
}

.navbar-right li{
  margin-left: 50px;
  font-size: 20px;
}

.navbar-default .navbar-nav>li>a:hover {
  color: #b61924;
}

.navbar-default .navbar-nav>li>a:active {
  color: #b61924;
}

.icon-nav{
  margin-right: 15px;
}

@media (min-width: 750px) and (max-width: 970px) {
  .navbar-right li{
    margin-left: 2px;
    font-size: 18px;
  }
  .icon-nav{
    margin-right: 5px;
  }
}

@media (min-width: 970px) and (max-width: 1200px) {
  .navbar-right li{
    margin-left: 6px;
    font-size: 18px;
  }
  .icon-nav{
    margin-right: 10px;
  }
}

h1{
  font-family: 'Oswald', sans-serif;
  font-weight: 700;
}

h2{
  font-family: 'Oswald', sans-serif;
  font-weight: 400;
  margin-bottom: 20px;
}

a{
  color: #b61924;
}

a:hover{
  color: #b61924;
}

.section{
  margin-top: 70px;
}

strong{
  font-family: 'Lato', sans-serif;
  font-weight: 700;
}

p{
  letter-spacing: 0;
  font-weight: 400;
  font-style: normal;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -moz-font-feature-settings: "liga" on;
  color: #333;
  font-size: 20px;
  line-height: 1.6;
}

@media (max-width: 768px){
  .container-perso{
    width: 90%;
    margin: auto;
  }
}

@media (min-width: 768px){
  .container-perso{
    width: 80%;
    margin: auto;
  }
}

@media (min-width: 992px){
  .container-perso{
    width: 700px;
    margin: auto;
  }
}

.m{
  margin-top: 20px;
}

@media (max-width: 768px){
  .home-main{
    background: url('https://d2am7l3wurrcf3.cloudfront.net/imagx/4cad2aec?768') no-repeat center center fixed;
  }
}

@media (min-width: 768px){
  .home-main{
    background: url('https://d2am7l3wurrcf3.cloudfront.net/imagx/4cad2aec?992') no-repeat center center fixed;
  }
}

@media (min-width: 992px){
  .home-main{
    background: url('../image/home.jpg') no-repeat center center fixed;
  }
}

.home-main {
  margin: 0;
  padding: 0px;
  position: relative;
  height: 100%;
  min-height: 300px;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-attachment: scroll;
  width: 100%;
}

.box-title{
  position: relative;
  top: 25%;
  text-align: center;
}

h1{
  color: white;
  font-size: 45px;
  margin: 0;
  margin: auto;
  margin-bottom: 50px;
  border-bottom: 3px solid #fff;
  padding-bottom: 10px;
  letter-spacing: 5px;
  width: 396px;
}

.text{
  width: 80%;
  margin: auto;
}

.text p{
  color: white;
  line-height: 60px;
  font-weight: 700;
  font-size: 28px;
}

@media (max-width: 768px){
  .text p{
    font-size: 22px;
    line-height: 42px;
  }
  .text{
    width: 90%;
    margin: auto;
  }
}

@media (min-width: 768px){
  .text p{
    font-size: 24px;
    line-height: 50px;
  }
  .text{
    width: 85%;
  }
}

@media (min-width: 992px){
  .text p{
    font-size: 26px;
    line-height: 55px;
  }
  .text{
    width: 85%;
  }
}

@media (min-width: 1170px){
  .text p{
    font-size: 28px;
    line-height: 60px;
  }
  .text{
    width: 80%;
  }
}

.box-chevron{
  text-align: center;
  position: absolute;
  color: white;
  bottom: 0px;
  left: 48%;
}

.chevron{
  font-size: 70px;
}

.chevron-a{
  color: white;
  font-size: 70px;
}

.chevron-a:hover{
  color: white;
}

.chevron-a:active{
  color: white;
}

.chevron-a:visited{
  color: white;
}

.sous-section{
  margin-top: 20px;
    margin-bottom: 30px;
}

.box-card{;
  margin-bottom:20px;
}

.box-icon{
    font-size: 60px;
      color: #b61924;
      margin-bottom: 5px;
      text-align: center;
}

.cursor{
cursor:pointer;
}

.send{
  font-size: 18px;
    background-color: #b61924;
    color: white;
    -webkit-transition: all 500ms ease;
    -moz-transition: all 500ms ease;
    -ms-transition: all 500ms ease;
    -o-transition: all 500ms ease;
    transition: all 500ms ease;
    padding-left: 30px;
    padding-right: 30px;
}

.send-icon{
  margin-right: 10px;
}

#alert{
  position: absolute;
  top: 1px;
  z-index: 10000000002;
  width: 100%;
border-color: #b61924;
background-color: #b61924;
color: white;
font-size: 18px;
display: none; 
}

.croix{
  color: white;
}

